--- a/client/index.html
+++ b/client/index.html
@@ -5,16 +5,20 @@
     <style>
        * { margin: 0; padding: 0; box-sizing: border-box; }
        body { font: 13px Helvetica, Arial; }
-       form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+       form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%;}
        form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
        form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-       #messages { list-style-type: none; margin: 0; padding: 0; }
+       #users { background: rgb(240, 240, 240); padding: 3px; float: right; width: 30%; min-height: 300px; border: 2px black;}
+       #messages { list-style-type: none; margin: 0; padding: 0; float:left; width: 70% }
        #messages li { padding: 5px 10px; }
        #messages li:nth-child(odd) { background: #eee; }
      </style>
   </head>
   <body>
-    <ul id="messages"></ul>
+    <div>
+      <ul id="users"></ul>
+      <ul id="messages"></ul>
+    </div>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
@@ -24,8 +28,9 @@
     $(function() {
       var socket = io();
       if(!socket.nickname) {
-        var nickname = prompt('what is your nickname?', 'cool')
-        socket.emit('nickname', nickname)
+        var nickname = prompt('what is your nickname?')
+        socket.emit('new user', nickname)
+        // socket.emit('nickname', nickname)
       }
       $('form').submit(function(){
         socket.emit('chat message', $('#m').val());
@@ -40,9 +45,15 @@
       socket.on('user join', function(msg) {
         $('#messages').append($('<li>').text(msg));
       })
-      socket.on('disconnect', function() {
-        $('#messages').append($('<li>').text('user disconnect'));
+      socket.on('disconnect', function(msg) {
+        $('#messages').append($('<li>').text(msg));
       })
+      socket.on('usernames', function(users) {
+        $('#users').html('')
+        users.forEach(function(user) {
+          $('#users').append($('<li>').text(user))
+        })
+      });
     });
     </script>
   </body>
