--- a/client/index.html
+++ b/client/index.html
@@ -54,6 +54,9 @@
           $('#users').append($('<li>').text(user))
         })
       });
+      socket.on('private message', function(msg) {
+        $('#messages').append($('<li>').append('<b>' + msg.from + ': ' + '</b>' + msg.msg + '<br/>'));
+      })
     });
     </script>
   </body>
