--- a/client/index.html
+++ b/client/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Socket.IO chat</title>
-    <style>
-       * { margin: 0; padding: 0; box-sizing: border-box; }
-       body { font: 13px Helvetica, Arial; }
-       form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%;}
-       form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-       form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-       #users { background: rgb(240, 240, 240); padding: 3px; float: right; width: 30%; min-height: 300px; border: 2px black;}
-       #messages { list-style-type: none; margin: 0; padding: 0; float:left; width: 70% }
-       #messages li { padding: 5px 10px; }
-       #messages li:nth-child(odd) { background: #eee; }
-     </style>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/style.css" />
   </head>
   <body>
     <div>
-      <ul id="users"></ul>
+      <div class="side-nav">
+        <h1 id="users-online">Users Online</h1>
+        <!-- <hr NOSHADE> -->
+        <ul id="users"></ul>
+      </div>
       <ul id="messages"></ul>
     </div>
     <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+      <input id="m" placeholder="Message to #general" autocomplete="off" />
     </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
